<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.dev.jaskiewicz.androidgui.MainWindow">

    <TextView
        android:id="@+id/first_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/first_name_edit_text"
        android:layout_alignBottom="@id/first_name_edit_text"/>

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Imię"
        android:layout_toRightOf="@+id/first_name_tv"/>

    <TextView
    android:id="@+id/last_name_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/last_name"
    android:layout_alignParentLeft="true"
    android:layout_alignBaseline="@id/last_name_edit_text"
    android:layout_alignBottom="@id/last_name_edit_text"/>

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_toRightOf="@id/last_name_tv"
        android:layout_below="@id/first_name_edit_text"/>

    <TextView
        android:id="@+id/grades_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_grades"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/last_name_tv"
        android:layout_alignBaseline="@id/grades_edit_text"
        android:layout_alignBottom="@id/grades_edit_text"/>

    <EditText
        android:id="@+id/grades_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_grades"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:layout_toRightOf="@id/grades_tv"
        android:layout_below="@id/last_name_edit_text"/>

    <TextView
        android:id="@+id/grades_summary_text_view"
        android:text="@string/your_average_grade_is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grades_edit_text"
        android:visibility="gone"/>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:onClick="onFinishClick"
        android:layout_below="@id/grades_summary_text_view"/>

    <Button
        android:id="@+id/grades_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grades"
        android:visibility="invisible"
        android:onClick="onGradesClick"
        android:layout_below="@id/grades_edit_text"/>

</RelativeLayout>